tests/NormalTests/paczka1/small_fuzzy/59070194.err
Error in line 1: A760 S380 33,6
Error in line 3: A760 A153 55,0
Error in line 9: fhpIUTQ A760 89,2
Error in line 15: Rf2rRMa6Q S380 98,0
